Changes in styling

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "dist/myportfolio/browser",
+    "target": "rajindersodhiportfolio",
     "ignore": [
       "firebase.json",
       "**/.*",
