--- a/.firebaserc
+++ b/.firebaserc
@@ -5,10 +5,11 @@
   "targets": {
     "rajindersodhiportfolio": {
       "hosting": {
-        "myportfolio": [
+        "rajindersodhiportfolio": [
           "rajindersodhiportfolio"
         ]
       }
     }
-  }
+  },
+  "etags": {}
 }
